--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              serenalyjuan@gmail.com
 description:        Freelance Writer | 自由作者
 author:             Li Yijuan
 baseurl:            ""
-url:                "https://github.com/Proskahn/L"
+url:                "https://github.com/Proskahn/L/"
 
 # Social Profiles
 twitter_username:   serena_lyjuan?t=RVuhMMCMiPkaru_oVax0pA&s=09
