--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:              Li Yijuan | 李懿娟
 email:              serenalyjuan@gmail.com
 description:        Freelance Writer | 自由作者
 author:             Li Yijuan
-baseurl:            ""
-url:                "https://github.com/Proskahn/L/"
+baseurl:            "https://github.com"
+url:                "/Proskahn/L/"
 
 # Social Profiles
 twitter_username:   serena_lyjuan?t=RVuhMMCMiPkaru_oVax0pA&s=09
